# pyroclast

./: .gitignore  README.md  main.py  notes.md  pyproject.toml  test.py  test_mc_kernel.py  visualize.py
benchmarks/: bench_kernels.py
docs/: extending.md  patterns.md
docs/sphinx/: conf.py
docs/sphinx/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/sphinx/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/sphinx/_build/html/_modules/: index.html
docs/sphinx/_build/html/_modules/pyroclast/ABCs/: compute.html  repository.html
docs/sphinx/_build/html/_modules/pyroclast/adapters/: opencl_adapter.html
docs/sphinx/_build/html/_sources/: api.rst.txt  index.rst.txt
pyroclast/: __init__.py
pyroclast/ABCs/: __init__.py  compute.py  monte_carlo.py  repository.py  rng.py
pyroclast/adapters/: __init__.py  opencl_adapter.py  opencl_mc_2d_adapter.py  opencl_mc_adapter.py
pyroclast/domain/: __init__.py  models.py
pyroclast/io/: __init__.py  data_repository.py
pyroclast/kernels/: monte_carlo.cl  monte_carlo_2d.cl  preprocessing.cl
pyroclast/services/: __init__.py  monte_carlo.py  preprocessing.py
report/: refs.bib  report.tex
report/chapters/: appendix_architecture.tex  kernel_monte_carlo.tex
tests/: test_criteria.py  test_domain.py  test_monte_carlo_adapter.py  test_monte_carlo_config.py  test_monte_carlo_service.py  test_opencl_adapter.py  test_preprocessing_service.py  test_repository.py
(+3 files in other folders)
