[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroclast"
version = "0.1.0"
description = "Monte Carlo GPU simulation of lava flow impact on vegetation habitats"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "rasterio>=1.3",
    "pyopencl>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["pyroclast"]
